--- a/stile.css
+++ b/stile.css
@@ -14,7 +14,7 @@ ul{
 a{
     color: white;
     text-decoration: none;
-    font-size: large;
+    font-size: 1.5rem;
 }
 header img{
     width: 160px;
@@ -28,6 +28,9 @@ header img{
 h1{
     color: green;
 }
+h2{
+    color: blue;
+}
 footer img{
     width: 50px;
     height: 40pt;
@@ -38,21 +41,29 @@ footer{
 
 }
 footer a{
-    margin: 20px;
+    margin: 18px;
     text-align: center;
     font-weight: 100;
 }
 footer p{
-    margin: 10px;
+    margin: 8px;
 }
 .container{
 padding: 0px 50px;
 }
 nav a:hover{
-    color: green;
+    color: red
 }
 
 footer a:hover{
     color: green;
 
+}
+section h3{
+    font-size: 1.2rem;
+    color: greenyellow
+}
+section p{
+    font-size: 1.2rem;
+    color: white;
 }
